--- a/app.json
+++ b/app.json
@@ -1,8 +1,9 @@
 {
   "pages": [
+    "pages/index/index",
+    "pages/login/login",
     "pages/renzheng/renzheng",
     "pages/my/my",
-    "pages/index/index",
     "pages/details/details",
     "pages/position/position",
     "pages/caiwu/caiwu",
