--- a/app.json
+++ b/app.json
@@ -7,6 +7,7 @@
     "pages/renzheng/renzheng",
     "pages/my/my",
     "pages/details/details",
+    "pages/details_fw/details",
     "pages/position/position",
     "pages/caiwu/caiwu",
     "pages/mymoney/mymoney",
