--- a/project.config.json
+++ b/project.config.json
@@ -14,7 +14,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.0.8",
-	"appid": "wx15a2d652d775549f",
+	"appid": "wx6eb0fd1baba590a0",
 	"projectname": "Repair_sf",
 	"simulatorType": "wechat",
 	"simulatorPluginLibVersion": {},
